--- a/app/assets/stylesheets/Object/Mixin/_btn.scss
+++ b/app/assets/stylesheets/Object/Mixin/_btn.scss
@@ -37,6 +37,7 @@
 // a要素ボタンのデータ
 %btn {
   @extend %a;
+  text-align: center;
   padding: 0.25rem 1rem;
   background-color: rgba($color-back, 0.3);
   border-radius: 5px;
