--- a/app/assets/stylesheets/Object/Mixin/_placeholder.scss
+++ b/app/assets/stylesheets/Object/Mixin/_placeholder.scss
@@ -36,26 +36,26 @@
 // アニメーション
 // ==========================================
 // 文字の発光(初動)
-@mixin radiation-text($scale, $color) {
-  color: rgba($color, 0.95);
-  text-shadow: shadowset($scale, tex) rgba($color, 0.75),
-    lightset($scale, tex) rgba($color, 0.75);
+@mixin radiation-text($scale, $_color) {
+  // color: rgba($_color, 0.6);
+  text-shadow: shadowset($scale, tex) rgba($_color, 0.9),
+    lightset($scale, tex) rgba($_color, 0.9);
 
-  @keyframes neonlit {
-    0% {
-      color: rgba($color, 0.95);
-      text-shadow: shadowset($scale, tex) rgba($color, 0.75),
-        lightset($scale, tex) rgba($color, 0.75);
-    }
+  // @keyframes neonlit {
+  //   0% {
+  //     color: rgba($_color, 0.95);
+  //     text-shadow: shadowset($scale, tex) rgba($_color, 0.75),
+  //       lightset($scale, tex) rgba($_color, 0.75);
+  //   }
 
-    100% {
-      color: rgba($color, 0.75);
-      text-shadow: shadowset($scale, tex) rgba($color, 0.5),
-        lightset($scale, tex) rgba($color, 0.5);
-    }
-  }
+  //   100% {
+  //     color: rgba($_color, 0.75);
+  //     text-shadow: shadowset($scale, tex) rgba($_color, 0.5),
+  //       lightset($scale, tex) rgba($_color, 0.5);
+  //   }
+  // }
 
-  animation: neonlit 1.5s linear 500ms 4 alternate backwards;
+  // animation: neonlit 1.5s linear 500ms 4 alternate backwards;
 }
 
 %cleardeco {
