--- a/app/views/materials/edit.html.slim
+++ b/app/views/materials/edit.html.slim
@@ -6,4 +6,6 @@
 /   = link_to '原料成分表一覧', materials_path, class: 'badge badge-secondary'
 
 = render partial: 'form',
-  locals: { material: @material, molar_masses: @molar_masses }
+  locals: { material: @material,
+    molar_masses: @molar_masses,
+    categories: @categories }
