--- a/app/assets/stylesheets/Object/Mixin/_newmorphism.scss
+++ b/app/assets/stylesheets/Object/Mixin/_newmorphism.scss
@@ -42,3 +42,34 @@
     inset shadowset($scale) $color-back-darken,
     inset lightset($scale) $color-back-lighten;
 }
+
+// ==========================================
+// 電光掲示板風
+@mixin video-billboard {
+  color: rgb(252, 72, 102);
+  font-weight: bold;
+  text-shadow: 20px 20px 60px rgb(255, 117, 140),
+    -20px -20px 60px rgb(255, 117, 140);
+
+  position: relative;
+  left: -450px;
+
+  animation-name: move;
+  animation-duration: 10s;
+  /* animation-iteration-count: infinite; */
+  animation-timing-function: linear;
+  animation-delay: 0.5s;
+
+  user-select: none;
+
+  @keyframes move {
+    0% {
+      transform: none;
+    }
+
+    100% {
+      /* transform: translateX(100vw); */
+      transform: translateX(150vw);
+    }
+  }
+}
